src/tests/testfiles/unary-operators/types-11.txt
testfiles/unary-operators/types-11.c:2:2: error: lvalue required as decrement operand
--'a';
^
